--- a/ms_01/pom.xml
+++ b/ms_01/pom.xml
@@ -107,23 +107,23 @@
 		      </dependency>
 		    </dependencies>
 		  </plugin>
-			<plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>cobertura-maven-plugin</artifactId>
-        <version>2.7</version>
-				<configuration>
-          <formats>
-            <format>xml</format>
-          </formats>
-					<outputDirectory>shippable/codecoverage</outputDirectory>
-					<exclusions>
-						<exclusion>
-							 <groupId>logback</groupId>
-							 <artifactId>logback-classic</artifactId>
-						</exclusion>
-					</exclusions>
-        </configuration>
-      </plugin>
+			<!-- <plugin> -->
+      <!--   <groupId>org.codehaus.mojo</groupId> -->
+      <!--   <artifactId>cobertura&#45;maven&#45;plugin</artifactId> -->
+      <!--   <version>2.7</version> -->
+			<!-- 	<configuration> -->
+      <!--     <formats> -->
+      <!--       <format>xml</format> -->
+      <!--     </formats> -->
+			<!-- 		<outputDirectory>shippable/codecoverage</outputDirectory> -->
+			<!-- 		<exclusions> -->
+			<!-- 			<exclusion> -->
+			<!-- 				 <groupId>logback</groupId> -->
+			<!-- 				 <artifactId>logback&#45;classic</artifactId> -->
+			<!-- 			</exclusion> -->
+			<!-- 		</exclusions> -->
+      <!--   </configuration> -->
+      <!-- </plugin> -->
 		</plugins>
 	</build>
 </project>
