--- a/ms_01/pom.xml
+++ b/ms_01/pom.xml
@@ -10,7 +10,6 @@
 
 	<properties>
 		<spring.version>4.3.2.RELEASE</spring.version>
-		<docker.image.prefix>ttrahan</docker.image.prefix>
 	</properties>
 
 	<dependencies>
@@ -97,7 +96,7 @@
 		    <version>2.19.1</version>
 				<configuration>
 			    <redirectTestOutputToFile>true</redirectTestOutputToFile>
-          <reportsDirectory>../shippable/testresults</reportsDirectory>
+          <reportsDirectory>shippable/testresults</reportsDirectory>
 			  </configuration>
 		    <dependencies>
 		      <dependency>
@@ -115,7 +114,7 @@
           <formats>
             <format>xml</format>
           </formats>
-          <outputDirectory>../shippable/codecoverage</outputDirectory>
+          <outputDirectory>shippable/codecoverage</outputDirectory>
 					<exclusions>
 						<exclusion>
 							 <groupId>logback</groupId>
