--- a/shippable.yml
+++ b/shippable.yml
@@ -12,18 +12,20 @@ env:
 build:
   ci:
     - cd $SHIPPABLE_BUILD_DIR
-    # run Maven build and tests
-    - mvn clean install
     # create location to store test and code coverage reports
     - SERVICES=(auth audit)
     - |
         for service in ${SERVICES[@]}; do
           export service
-          cd $SHIPPABLE_BUILD_DIR
+          cd $SHIPPABLE_BUILD_DIR/$service
+          # run Maven build and tests for each service
+          # mvn clean install
+          mvn -q -B clean cobertura:cobertura install
           # update Dockerfile template with service value
-          envsubst < zz-docker/$service/Dockerfile > zz-docker/$service/Dockerfile
-          cp $service/target/$service.jar zz-docker/$service
-          cp zz-docker/application.yml zz-docker/$service
+          # envsubst < zz-docker/$service/Dockerfile > zz-docker/$service/Dockerfile
+          shippable_replace zz-docker/$service/Dockerfile 
+          # cp $service/target/$service.jar zz-docker/$service
+          # cp zz-docker/application.yml zz-docker/$service
           # build docker image and push to registry
           docker build -t $GCR_REPO/$service zz-docker/$service
           docker tag $service $GCR_REPO/$service
