--- a/shippable.yml
+++ b/shippable.yml
@@ -23,13 +23,12 @@ build:
           mvn -q -B clean cobertura:cobertura install
           # update Dockerfile template with service value
           # envsubst < zz-docker/$service/Dockerfile > zz-docker/$service/Dockerfile
-          shippable_replace zz-docker/$service/Dockerfile 
+          shippable_replace $SHIPPABLE_BUILD_DIR/zz-docker/$service/Dockerfile 
           # cp $service/target/$service.jar zz-docker/$service
           # cp zz-docker/application.yml zz-docker/$service
           # build docker image and push to registry
-          docker build -t $GCR_REPO/$service zz-docker/$service
-          docker tag $service $GCR_REPO/$service
-          docker push $GCR_REPO/$service
+          docker build -t $GCR_REPO:$service zz-docker/$service
+          docker push $GCR_REPO:$service
           popd
         done
 
