--- a/shippable.yml
+++ b/shippable.yml
@@ -20,6 +20,7 @@ build:
           # run Maven build and tests for each service
           # mvn clean install
           mvn -q -f $SHIPPABLE_BUILD_DIR/$service -B clean cobertura:cobertura install
+          ls $SHIPPABLE_BUILD_DIR/$service/target
           # update Dockerfile template with service value
           # envsubst < zz-docker/$service/Dockerfile > zz-docker/$service/Dockerfile
           shippable_replace $SHIPPABLE_BUILD_DIR/zz-docker/$service/Dockerfile 
