--- a/shippable.yml
+++ b/shippable.yml
@@ -21,7 +21,7 @@ build:
           # mvn clean install
           mvn -q -f $SHIPPABLE_BUILD_DIR/$service -B clean cobertura:cobertura install
           echo $SHIPPABLE_BUILD_DIR/$service/target
-          ls $SHIPPABLE_BUILD_DIR/$service/target
+          ls -la $SHIPPABLE_BUILD_DIR/$service/target
           # update Dockerfile template with service value
           # envsubst < zz-docker/$service/Dockerfile > zz-docker/$service/Dockerfile
           shippable_replace $SHIPPABLE_BUILD_DIR/zz-docker/$service/Dockerfile 
