--- a/shippable.yml
+++ b/shippable.yml
@@ -23,11 +23,12 @@ build:
           # update Dockerfile template with service value
           # envsubst < zz-docker/$service/Dockerfile > zz-docker/$service/Dockerfile
           shippable_replace $SHIPPABLE_BUILD_DIR/zz-docker/$service/Dockerfile 
-          # cp $service/target/$service.jar zz-docker/$service
-          cp $service/target/${service}.war zz-docker/$service
+          # cp $service/target/${service}.jar zz-docker/$service
+          cp $service/target/HelloWorld.war zz-docker/$service
+          ls -al zz-docker/$service
           # cp zz-docker/application.yml zz-docker/$service
           # build docker image and push to registry
-          echo $GCR_REPO:service
+          echo $GCR_REPO:$service
           docker build -t $GCR_REPO:$service zz-docker/$service
           docker push $GCR_REPO:$service
         done
