--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -24,7 +24,7 @@ jobs:
         - script: SERVICES=(auth audit)
         # deploy each service to GKE
         - script: |
-            for each service in ${SERVICES[@]}; do
+            for service in ${SERVICES[@]}; do
               - script: echo "deploying $service"
               # update template files with values in env variables
               - script: cd $JAVA_GCR_GKE_RUNCLI_GITREPO_STATE
@@ -48,7 +48,7 @@ jobs:
         - script: SERVICES=(audit)
         # deploy each service to GKE
         - script: |
-            for each service in ${SERVICES[@]}; do
+            for service in ${SERVICES[@]}; do
               - script: echo "deploying $service"
               # update template files with values in env variables
               - script: cd $JAVA_GCR_GKE_RUNCLI_GITREPO_STATE
@@ -72,7 +72,7 @@ jobs:
         - script: SERVICES=(auth)
         # deploy each service to GKE
         - script: |
-            for each service in ${SERVICES[@]}; do
+            for service in ${SERVICES[@]}; do
               - script: echo "deploying $service"
               # update template files with values in env variables
               - script: cd $JAVA_GCR_GKE_RUNCLI_GITREPO_STATE
