--- a/kube-deploy.yaml
+++ b/kube-deploy.yaml
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   # Unique key of the Deployment instance
-  name: sample-node-ayeaye-$SERVICE
+  name: $SERVICE
   namespace: test
 spec:
   replicas: 1
@@ -20,11 +20,11 @@ spec:
       labels:
         # Apply this label to pods and default
         # the Deployment label selector to this value
-        app: sample-node-ayeaye
+        app: $SERVICE
         env: test
     spec:
       containers:
-      - name: sample-node-ayeaye
+      - name: $SERVICE
         image: gcr.io/shippable-gke/java-gcr-gke-runcli:$SERVICE
         ports:
         - containerPort: 80
