--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -32,11 +32,11 @@ jobs:
               # update template files with values in env variables
               cd $JAVA_GCR_GKE_RUNCLI_GITREPO_STATE
               # shippable_replace zz-kubernetes/deploy-$SERVICE.yml
-              shippable_replace kube-deploy.yaml
-              cat kube-deploy.yaml
+              shippable_replace zz-docker/$SERVICE/kube-deploy.yaml
+              cat zz-docker/$SERVICE/kube-deploy.yaml
               # deploy to cluster and verify success
               # kubectl apply -f zz-kubernetes/deploy-$SERVICE.yml
-              kubectl apply -f kube-deploy.yaml
+              kubectl apply -f zz-docker/$SERVICE/kube-deploy.yaml
               kubectl rollout status deployments $SERVICE --namespace shippable-gke
             done
     flags:
